Fixed flex-wrap

--- a/client/src/pages/Home/Home.style.scss
+++ b/client/src/pages/Home/Home.style.scss
@@ -6,7 +6,7 @@
 
   &__products {
     display: flex;
-    flex-direction: grid;
+    flex-direction: row;
     flex-wrap: wrap;
 
     a {
